--- a/css/projects.css
+++ b/css/projects.css
@@ -1,10 +1,8 @@
 .projects {
-    width: 100vw;
-    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 10rem;
+    padding-top: 5rem;
     gap: 4rem;
 }
 
